<resources>
    <string name="app_name">The Walker</string>
    <string name="logo_of_the_app">logo of the app</string>
    <string name="load_game">Load game</string>
    <string name="create_game">Create Game</string>
    <string name="about_us">About us</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="finished">finished</string>
    <string name="remove_checkpoint">Remove checkpoint</string>
    <string name="add_checkpoint">Add checkpoint</string>
    <string name="address">Address:\u0020</string>
    <string name="y">Y:\u0020</string>
    <string name="x">X:\u0020</string>
    <string name="title">Title:\u0020</string>
    <string name="author">Author:\u0020</string>
    <string name="eta">ETA:\u0020</string>
    <string name="about">This app is based on a game played at Appalachian State University. Enjoy.</string>
    <string name="description">Description:\u0020</string>
    <string name="checkpoints">Checkpoints:\u0020</string>
    <string name="distance">Distance:\u0020</string>
    <string name="play">PLAY</string>
    <string name="title_activity_maps">Map</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="open_map">Open Map</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="hint_1">Hint 1:</string>
    <string name="hint_2">Hint 2:</string>
    <string name="hint_3">Hint 3:</string>
    <string name="hint_4">Hint 4:</string>
    <string name="SearchFor">Search For:</string>
    <string name="stitle">Title</string>
    <string name="sauthor">Author</string>
    <string name="sdescription">Description</string>
    <string name="searchby">Search By:</string>
    <string name="pin_it">Pin it!</string>
    <string name="save">Save</string>
    <string name="nfc">NFC</string>
    <string name="shareChoose">Choose how to share your game:</string>
    <string name="nfcAdd">Would you like to save this game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
