<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="14sp"
                android:text="@string/x" />

            <EditText
                android:id="@+id/x_input"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/y" />
            <EditText
                android:id="@+id/y_input"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/greybg">

                <TextView
                    android:id="@+id/currloc"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:background="@drawable/list_click"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:text="@string/use_current_location"
                    android:clickable="true"/>

                <TextView
                    android:id="@+id/open_map"
                    android:layout_marginBottom="1dp"
                    android:background="@drawable/list_click"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:text="@string/open_map"
                    android:clickable="true"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/hint_1" />
            <EditText
                android:id="@+id/hint1_input"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/hint_2" />
            <EditText
                android:id="@+id/hint2_input"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/hint_3" />
            <EditText
                android:id="@+id/hint3_input"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/hint_4" />
            <EditText
                android:id="@+id/hint4_input"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_cp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_cp"
            android:text="@string/add"/>
    </LinearLayout>
</LinearLayout>