<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_toolbar"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:text="@string/add"
            android:drawableTop="@drawable/ic_add"
            android:id="@+id/create_add"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:text="@string/remove"
            android:drawableTop="@drawable/ic_remove"
            android:id="@+id/create_remove"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:text="@string/finished"
            android:drawableTop="@drawable/ic_finished"
            android:id="@+id/create_finished"
            android:layout_weight="1"
            />

    </LinearLayout>

</RelativeLayout>