<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:background="@drawable/list_click"
    android:clickable="true"
    android:id="@+id/checkpoint_object">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/c_address">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/address"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/address_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text=""
            android:textSize="20sp"

            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:id="@+id/checkbox_checkpoint"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/c_address">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/x"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1"
            android:id="@+id/c_x"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y"
            android:layout_margin="5dp"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1"
            android:id="@+id/c_y"
            />

    </LinearLayout>




</RelativeLayout>